--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/var-codes-full.component.html
@@ -39,7 +39,7 @@
           <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
                        [code]="code" [allCodes]="codes"></code-header>
           <code-rules-full [style.padding-left.px]="4" [style.height]="'calc(100% - 60px)'"
-                           [code]="code" [arrayMode]="true" [fragmentMode]="!!fragmenting"
+                           [code]="code" [varInfo]="varInfo" [fragmentMode]="!!fragmenting"
                            (codeRulesChanged)="codesChanged.emit(codes)"></code-rules-full>
         </div>
         <code-instruction [code]="code" (codeDataChanged)="codesChanged.emit(codes)" class="fx-flex-fill"></code-instruction>
