--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -12,7 +12,7 @@
       <div *ngIf="varCoding.sourceType !== 'BASE'" [style.margin]="'4px 0 4px 20px'" class="fx-column-start-stretch">
         <mat-form-field>
           <mat-label>{{'derive-method.prompt' | translate}}</mat-label>
-          <mat-select [(value)]="varCoding.sourceType" (selectionChange)="lastChangeFrom$.next('derive-method')">
+          <mat-select [(value)]="varCoding.sourceType" (selectionChange)="lastChangeFrom$.next('derive-method'); updateVarInfo()">
             <mat-option [value]="'COPY_VALUE'">
               {{'derive-method.COPY_VALUE' | translate}}
             </mat-option>
@@ -94,17 +94,30 @@
   </div>
   <ng-container [ngSwitch]="varCoding.codeModel">
     <var-codes-manual *ngSwitchCase="'MANUAL'"
-                    class="fx-flex-row-100" [style.margin-top.px]="10"
-                    [codes]="varCoding.codes"
-                    (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
-                    [processing]="varCoding.processing"
-                    [fragmenting]="varCoding.fragmenting"
-                    (fragmentingChanged)="setFragmenting($event)"
-                    (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
-                    [codeModelParameters]="varCoding.codeModelParameters"
-                    (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
+                      class="fx-flex-row-100" [style.margin-top.px]="10"
+                      [codes]="varCoding.codes"
+                      (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                      [processing]="varCoding.processing"
+                      [fragmenting]="varCoding.fragmenting"
+                      (fragmentingChanged)="setFragmenting($event)"
+                      [varInfo]="varInfo"
+                      (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                      [codeModelParameters]="varCoding.codeModelParameters"
+                      (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
     </var-codes-manual>
     <var-codes-value-list *ngSwitchCase="'VALUE_LIST'"
+                          class="fx-flex-row-100" [style.margin-top.px]="10"
+                          [codes]="varCoding.codes"
+                          (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                          [processing]="varCoding.processing"
+                          (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                          [fragmenting]="varCoding.fragmenting"
+                          (fragmentingChanged)="setFragmenting($event)"
+                          [varInfo]="varInfo"
+                          [codeModelParameters]="varCoding.codeModelParameters"
+                          (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
+    </var-codes-value-list>
+    <var-codes-choice *ngSwitchCase="'CHOICE'"
                       class="fx-flex-row-100" [style.margin-top.px]="10"
                       [codes]="varCoding.codes"
                       (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
@@ -112,30 +125,21 @@
                       (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
                       [fragmenting]="varCoding.fragmenting"
                       (fragmentingChanged)="setFragmenting($event)"
+                      [varInfo]="varInfo"
                       [codeModelParameters]="varCoding.codeModelParameters"
                       (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
-    </var-codes-value-list>
-    <var-codes-choice *ngSwitchCase="'CHOICE'"
-                          class="fx-flex-row-100" [style.margin-top.px]="10"
-                          [codes]="varCoding.codes"
-                          (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
-                          [processing]="varCoding.processing"
-                          (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
-                          [fragmenting]="varCoding.fragmenting"
-                          (fragmentingChanged)="setFragmenting($event)"
-                          [codeModelParameters]="varCoding.codeModelParameters"
-                          (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
     </var-codes-choice>
     <var-codes-number *ngSwitchCase="'NUMBER'"
-                          class="fx-flex-row-100" [style.margin-top.px]="10"
-                          [codes]="varCoding.codes"
-                          (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
-                          [processing]="varCoding.processing"
-                          (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
-                          [fragmenting]="varCoding.fragmenting"
-                          (fragmentingChanged)="setFragmenting($event)"
-                          [codeModelParameters]="varCoding.codeModelParameters"
-                          (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
+                      class="fx-flex-row-100" [style.margin-top.px]="10"
+                      [codes]="varCoding.codes"
+                      (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                      [processing]="varCoding.processing"
+                      (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                      [fragmenting]="varCoding.fragmenting"
+                      (fragmentingChanged)="setFragmenting($event)"
+                      [varInfo]="varInfo"
+                      [codeModelParameters]="varCoding.codeModelParameters"
+                      (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
     </var-codes-number>
     <var-codes-full *ngSwitchDefault
                     class="fx-flex-row-100" [style.margin-top.px]="10"
@@ -145,6 +149,7 @@
                     (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
                     [fragmenting]="varCoding.fragmenting"
                     (fragmentingChanged)="setFragmenting($event)"
+                    [varInfo]="varInfo"
                     [codeModelParameters]="varCoding.codeModelParameters"
                     (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')">
     </var-codes-full>
