--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/code-rules-full.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-full/code-rules-full.component.html
@@ -66,7 +66,7 @@
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item
-                    *ngFor="let newSource of (ruleSet.rules | possibleNewRules:'':varInfo?.nullable:fragmentMode:ruleSet.ruleOperatorAnd)"
+                    *ngFor="let newSource of (ruleSet.rules | possibleNewRules:varInfo?.type:varInfo?.nullable:fragmentMode:ruleSet.ruleOperatorAnd)"
                     (click)="addRule(ruleSet, newSource)">
               {{('rule.' + newSource) | translate}}
             </button>
