--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
@@ -5,11 +5,20 @@
     </div>
   </div>
   <div *ngIf="codes" class="fx-column-start-stretch">
-    <div *ngFor="let cd of codes; index as codeIndex" class="fx-row-start-stretch">
-      <code-number [code]="cd" class="fx-flex-fill" [style.margin-bottom.px]="4"
-                   [elseCodeExists]="elseCodeExists" [isEmptyCodeExists]="isEmptyCodeExists" [isNullCodeExists]="isNullCodeExists"
-                   [allCodes]="codes"
-                   (codeChanged)="codesChanged.emit(codes)"></code-number>
+    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch">
+      <div class="fx-column-start-stretch fx-flex-fill">
+        <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
+                     [code]="code" [allCodes]="codes"></code-header>
+        <div class="fx-row-start-start fx-gap-10">
+          <div class="has-rules-warning">
+            <p *ngIf="code.manualInstruction"
+               matTooltip="Es gibt Instruktionen für das manuelle Kodieren, die unnötig sind (automatische Kodierung eindeutig).">!!</p>
+          </div>
+          <code-rules-full [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
+                           [code]="code" [varInfo]="varInfo" [fragmentMode]="!!fragmenting"
+                           (codeRulesChanged)="codesChanged.emit(codes)"></code-rules-full>
+        </div>
+      </div>
       <button mat-icon-button (click)="deleteCode(codeIndex); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
@@ -21,11 +30,11 @@
       <button mat-raised-button (click)="addCodeNoCredit()">
         <mat-icon>add</mat-icon>{{'code.prompt.add-score0' | translate}}
       </button>
-      <button mat-raised-button (click)="addCodeSingleton('ELSE', translateService); updateCodeExistences()" [disabled]="!!elseCodeExists">
+      <button mat-raised-button (click)="addCodeSingleton('ELSE'); updateCodeExistences()" [disabled]="!!elseCodeExists">
         <mat-icon>add</mat-icon>{{'code.prompt.add-else' | translate}}
       </button>
       <button mat-raised-button *ngIf="varInfo?.nullable"
-              (click)="addCodeSingleton('IS_NULL', translateService); updateCodeExistences()" [disabled]="!!isNullCodeExists">
+              (click)="addCodeSingleton('IS_NULL'); updateCodeExistences()" [disabled]="!!isNullCodeExists">
         <mat-icon>add</mat-icon>{{'code.prompt.add-is-null' | translate}}
       </button>
     </div>
