--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-value-list/var-codes-value-list.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-value-list/var-codes-value-list.component.html
@@ -31,10 +31,10 @@
       <button mat-raised-button (click)="addCodeNoCredit()">
         <mat-icon>add</mat-icon>{{'code.prompt.add-score0' | translate}}
       </button>
-      <button mat-raised-button (click)="addCodeSingleton('ELSE', translateService); updateCodeExistences()" [disabled]="!!elseCodeExists">
+      <button mat-raised-button (click)="addCodeSingleton('ELSE'); updateCodeExistences()" [disabled]="!!elseCodeExists">
         <mat-icon>add</mat-icon>{{'code.prompt.add-else' | translate}}
       </button>
-      <button mat-raised-button (click)="addCodeSingleton('IS_EMPTY', translateService); updateCodeExistences()" [disabled]="!!isEmptyCodeExists">
+      <button mat-raised-button (click)="addCodeSingleton('IS_EMPTY'); updateCodeExistences()" [disabled]="!!isEmptyCodeExists">
         <mat-icon>add</mat-icon>{{'code.prompt.add-is-empty' | translate}}
       </button>
     </div>
