--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-choice/var-codes-choice.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-choice/var-codes-choice.component.html
@@ -5,11 +5,19 @@
     </div>
   </div>
   <div *ngIf="codes" class="fx-column-start-stretch">
-    <div *ngFor="let cd of codes; index as codeIndex" class="fx-row-start-stretch">
-      <code-choice [code]="cd" class="fx-flex-fill" [style.margin-bottom.px]="4"
-                       [elseCodeExists]="elseCodeExists" [isEmptyCodeExists]="isEmptyCodeExists"
-                       [allCodes]="codes"
-                       (codeChanged)="codesChanged.emit(codes)"></code-choice>
+    <div *ngFor="let code of codes; index as codeIndex" class="fx-row-start-stretch">
+      <div class="fx-column-start-stretch fx-flex-fill">
+        <code-header (codeDataChanged)="codesChanged.emit(codes)" [enableSwitchNull]="true"
+                     [code]="code" [allCodes]="codes"></code-header>
+        <div class="fx-row-start-start fx-gap-10">
+          <div class="has-rules-warning">
+            <p *ngIf="code.manualInstruction" [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
+          </div>
+          <code-rules-full [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
+                           [code]="code" [varInfo]="varInfo" [fragmentMode]="!!fragmenting"
+                           (codeRulesChanged)="codesChanged.emit(codes)"></code-rules-full>
+        </div>
+      </div>
       <button mat-icon-button (click)="deleteCode(codeIndex); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
