Update coding as text

--- a/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <mat-selection-list *ngIf="generationModel === 'single-choice-some'"
-                        [(ngModel)]="selectedOption" multiple="false">
+                        [(ngModel)]="selectedOptions" multiple="false">
       <mat-list-option *ngFor="let c of options" [value]="c.value">
         '{{c.value}}'{{c.label ? ' - ' : '' }}{{c.label}}
       </mat-list-option>
