--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-choice/var-codes-choice.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-choice/var-codes-choice.component.html
@@ -13,9 +13,9 @@
           <div class="has-rules-warning">
             <p *ngIf="code.manualInstruction" [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
           </div>
-          <code-rules-full [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
+          <code-rules [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
                            [code]="code" [varInfo]="varInfo" [fragmentMode]="!!fragmenting"
-                           (codeRulesChanged)="codesChanged.emit(codes)"></code-rules-full>
+                           (codeRulesChanged)="codesChanged.emit(codes)"></code-rules>
         </div>
       </div>
       <button mat-icon-button (click)="deleteCode(codeIndex); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
