Fix coding generation: single-choice-many

--- a/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
@@ -40,7 +40,7 @@
     <mat-form-field *ngIf="generationModel === 'single-choice-many'">
       <mat-select [(value)]="selectedOption">
         <mat-option *ngFor="let c of options" [value]="c.value">
-          '{{c.value}}'{{c.label ? ' - ' : '' }}{{c.label}}
+          {{c.value}}{{c.label ? ' - ' : '' }}{{c.label}}
         </mat-option>
       </mat-select>
     </mat-form-field>
