--- a/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
@@ -66,7 +66,11 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <div *ngIf="generationModel === 'integer'" class="fx-row-start-center">
+    <div *ngIf="generationModel === 'simple-input'" class="fx-row-start-center">
+      <mat-label>{{'coding.generate.model.simple-input-numeric' | translate}}</mat-label>
+      <mat-checkbox [(ngModel)]="textAsNumeric" [style.margin.px]="8"></mat-checkbox>
+    </div>
+    <div *ngIf="generationModel === 'integer' || (textAsNumeric && generationModel === 'simple-input')" class="fx-row-start-center">
       <mat-form-field>
         <mat-label>{{ 'rule.NUMERIC_MORE_THEN' | translate }}</mat-label>
         <input matInput
@@ -81,7 +85,7 @@
       </mat-form-field>
       <div>{{numericRuleText}}</div>
     </div>
-    <div *ngIf="generationModel === 'simple-input'" class="fx-row-start-center">
+    <div *ngIf="generationModel === 'simple-input' && !textAsNumeric" class="fx-row-start-start fx-gap-10">
       <mat-form-field>
         <textarea matInput
                   [(ngModel)]="selectedOption"
@@ -89,6 +93,7 @@
                   cdkAutosizeMinRows="2"
                   cdkAutosizeMaxRows="8"></textarea>
       </mat-form-field>
+      <div>{{'coding.generate.model.simple-input-not-numeric' | translate}}</div>
     </div>
     <p [style.font-style]="'italic'">{{ 'coding.generate.warning' | translate}}</p>
   </div>
