--- a/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-codes-number/var-codes-number.component.html
@@ -14,7 +14,7 @@
             <p *ngIf="code.manualInstruction" [matTooltip]="'code.has-rule-warning.autocode' | translate">!!</p>
           </div>
           <code-rules [style.padding-left.px]="4" [style.flex]="'1 1 auto'"
-                           [code]="code" [varInfo]="varInfo" [fragmentMode]="!!fragmenting"
+                           [code]="code" [varInfo]="varInfo" preferredDataType="number" [fragmentMode]="!!fragmenting"
                            (codeRulesChanged)="codesChanged.emit(codes)"></code-rules>
         </div>
       </div>
