--- a/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/dialogs/generate-coding-dialog.component.html
@@ -70,40 +70,40 @@
       <mat-label>{{'coding.generate.model.simple-input-numeric' | translate}}</mat-label>
       <mat-checkbox [(ngModel)]="textAsNumeric" [style.margin.px]="8"></mat-checkbox>
     </div>
-    <div *ngIf="generationModel === 'integer' || (textAsNumeric && generationModel === 'simple-input')" class="fx-column-start-center">
-      <mat-radio-group [(ngModel)]="numericRule">
-        <div class="fx-row-start-center">
-          <div [style.width.px]="200">{{'rule.NUMERIC_MATCH' | translate}}</div>
-          <mat-radio-button [value]="'match'"></mat-radio-button>
-          <mat-form-field>
-            <input matInput [disabled]="numericRule !== 'match'" [(ngModel)]="numericMatch">
-          </mat-form-field>
-        </div>
-        <div class="fx-row-start-center">
-          <div [style.width.px]="200">{{'rule.NUMERIC_RANGE' | translate}}</div>
-          <mat-radio-button [value]="'range'"></mat-radio-button>
-          <mat-form-field>
-            <mat-label>{{ 'rule.NUMERIC_MORE_THEN' | translate }}</mat-label>
-            <input matInput [disabled]="numericRule !== 'range'"
-                   [(ngModel)]="numericMoreThen"
-                   (ngModelChange)="updateNumericRuleText()">
-          </mat-form-field>
-          <mat-form-field [style.margin.px]="8">
-            <mat-label>{{ 'rule.NUMERIC_MAX' | translate }}</mat-label>
-            <input matInput [disabled]="numericRule !== 'range'"
-                   [(ngModel)]="numericMax"
-                   (ngModelChange)="updateNumericRuleText()">
-          </mat-form-field>
-          <div class="fx-flex-fill">{{numericRuleText}}</div>
-        </div>
-        <div class="fx-row-start-center">
-          <div [style.width.px]="200">{{'rule.NUMERIC_MIN' | translate}}</div>
-          <mat-radio-button [value]="'min'"></mat-radio-button>
-          <mat-form-field>
-            <input matInput [(ngModel)]="numericMin" [disabled]="numericRule !== 'min'">
-          </mat-form-field>
-        </div>
-      </mat-radio-group>
+    <div *ngIf="generationModel === 'integer' || (textAsNumeric && generationModel === 'simple-input')" class="fx-column-start-start">
+      <div class="fx-row-start-center">
+        <div [style.width.px]="200">{{'rule.NUMERIC_MATCH' | translate}}</div>
+        <mat-form-field>
+          <mat-label>{{ 'rule.NUMERIC_MATCH' | translate }}</mat-label>
+          <input matInput [(ngModel)]="numericMatch" (ngModelChange)="updateNumericRuleText()">
+        </mat-form-field>
+      </div>
+      <div class="fx-row-start-center">
+        <div [style.width.px]="200">{{'coding.generate.lower-limit' | translate}}</div>
+        <mat-form-field>
+          <mat-label>{{ 'rule.NUMERIC_MORE_THEN' | translate }}</mat-label>
+          <input matInput [(ngModel)]="numericMoreThen" (ngModelChange)="updateNumericRuleText()">
+        </mat-form-field>
+        <mat-form-field [style.margin.px]="8">
+          <mat-label>{{ 'rule.NUMERIC_MIN' | translate }}</mat-label>
+          <input matInput [(ngModel)]="numericMin" (ngModelChange)="updateNumericRuleText()">
+        </mat-form-field>
+      </div>
+      <div class="fx-row-start-center">
+        <div [style.width.px]="200">{{'coding.generate.upper-limit' | translate}}</div>
+        <mat-form-field>
+          <mat-label>{{ 'rule.NUMERIC_LESS_THEN' | translate }}</mat-label>
+          <input matInput [(ngModel)]="numericLessThen" (ngModelChange)="updateNumericRuleText()">
+        </mat-form-field>
+        <mat-form-field [style.margin.px]="8">
+          <mat-label>{{ 'rule.NUMERIC_MAX' | translate }}</mat-label>
+          <input matInput [(ngModel)]="numericMax" (ngModelChange)="updateNumericRuleText()">
+        </mat-form-field>
+      </div>
+      <div class="fx-row-start-center">
+        <div [style.width.px]="200">{{'coding.generate.true-code' | translate}}:</div>
+        <div [class]="numericRuleError ? 'rule-text-error' : 'rule-text-ok'">{{numericRuleText}}</div>
+      </div>
     </div>
     <div *ngIf="generationModel === 'simple-input' && !textAsNumeric" class="fx-row-start-start fx-gap-10">
       <mat-form-field>
